Fixed issue with dropdown
Fixed issues with dropdown not showing properly

--- a/src/PathfindingVisualizer/PathfindingVisualizer.css
+++ b/src/PathfindingVisualizer/PathfindingVisualizer.css
@@ -81,7 +81,7 @@ ul {
   position: absolute;
   display: inline-block;
   top: 7px;
-  left: calc(62.5%);
+  left: calc(75%);
   height: 40px;
   width: 130px;
   font-size: 16px;
@@ -93,47 +93,17 @@ ul {
   left: calc(75%);
 }
 
-.dropdown {
-  position: absolute;
-  display: inline-block;
-}
-
-.algoDropdown {
-}
-
-.algoDropdown-list {
-  position: absolute;
-  top: 100px;
-  left: -17.5px;
-
-  width: 130px;
-  background-color: rgb(206, 206, 206);
-  border: 1px #ccc;
-  border-radius: 8px;
-  display: none;
-}
-
-.algoDropdown-item {
-  cursor: pointer;
-  transition: 0.2s;
-  font-weight: 550;
-}
-
-/* Change background color of items on hover */
-.algoDropdown-item:hover {
-  border-radius: 8px;
-  background-color: rgb(89, 185, 157);
-  color: white;
-  cursor: p;
-}
-
 /* Show the list when hovering over the button */
-.algoDropdown:hover .dropdown-list {
+.algoDropdown:hover .algoDropdown-list {
+  display: block;
+}
+
+.mazeDropdown:hover .mazeDropdown-list {
   display: block;
 }
 
 /* Dropdown list styling */
-.dropdown-list {
+.algoDropdown-list {
   position: absolute;
 
   width: 130px;
@@ -145,8 +115,27 @@ ul {
   left: 182px;
 }
 
+.mazeDropdown-list {
+  position: absolute;
+
+  width: 130px;
+  background-color: rgb(206, 206, 206);
+  border: 1px #ccc;
+  border-radius: 8px;
+  display: none;
+  top: -9px;
+  left: calc(82.8%);
+}
+
 /* Dropdown item styling */
-.dropdown-item {
+.algoDropdown-item {
+  padding: 5px;
+  cursor: pointer;
+  transition: 0.2s;
+  font-weight: 550;
+}
+
+.mazeDropdown-item {
   padding: 5px;
   cursor: pointer;
   transition: 0.2s;
@@ -154,15 +143,26 @@ ul {
 }
 
 /* Change background color of items on hover */
-.dropdown-item:hover {
+.algoDropdown-item:hover {
   border-radius: 8px;
   background-color: rgb(89, 185, 157);
   color: white;
-  cursor: p;
+  cursor: pointer;
+}
+
+.mazeDropdown-item:hover {
+  border-radius: 8px;
+  background-color: rgb(89, 185, 157);
+  color: white;
+  cursor: pointer;
 }
 
 /* Show the list when hovering over the button */
-.dropdown:hover .dropdown-list {
+.dropdown:hover .algoDropdown-list {
+  display: block;
+}
+
+.dropdown:hover .mazeDropdown-list {
   display: block;
 }
 
